--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -58,10 +58,12 @@
                     android:layout_width="196dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="56dp"
+                    android:spinnerMode="dialog"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_editText2_00" />
+                    app:layout_constraintTop_toBottomOf="@+id/name_editText2_00"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
