--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -13,7 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="545dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -73,8 +73,6 @@
             android:layout_marginTop="8dp"
             android:clickable="true"
             android:drawableLeft="@drawable/ic_edit_black_24dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/bookmark_icon"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -93,13 +91,12 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:text="8 hours ago"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.97"
             app:layout_constraintStart_toEndOf="@+id/bookmark_icon"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -126,10 +123,21 @@
             android:layout_marginTop="12dp"
             android:text="#anouncements"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintHorizontal_bias="0.061"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_icon" />
+
+        <TextView
+            android:id="@+id/delete_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:drawableLeft="@drawable/ic_delete_black_24dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.94"
+            app:layout_constraintStart_toEndOf="@+id/comment_icon" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
