--- a/app/src/main/res/layout/activity_admin_upload.xml
+++ b/app/src/main/res/layout/activity_admin_upload.xml
@@ -38,6 +38,7 @@
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:layout_marginTop="56dp"
+                    android:background="@drawable/profile_pic_placeholder"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.495"
                     app:layout_constraintStart_toStartOf="parent"
