--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.atelier.activities.MainActivity"
     android:id="@+id/drawer_layout"
+    android:background="#303030"
     >
 
 
