--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -28,6 +28,7 @@
             android:id="@+id/photo200"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/profile_pic_placeholder"
             android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
@@ -83,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Username"
+        android:text="Full Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
