--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,33 +38,35 @@
                     android:layout_height="match_parent">
 
                     <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="453dp"
+                        android:layout_height="166dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/tierrrrrrr" />
+
+                    <ImageView
                         android:id="@+id/threedots"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="24dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.966"
+                        app:layout_constraintHorizontal_bias="0.936"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/menu" />
+                        app:layout_constraintTop_toTopOf="@+id/imageView4"
+                        app:srcCompat="@drawable/ic_menu_black_24dp" />
 
-                    <TextView
-                        android:id="@+id/username_aa"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
+                    <Spinner
+                        android:id="@+id/spinnerr"
+                        android:layout_width="147dp"
+                        android:layout_height="21dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginRight="8dp"
-                        android:fontFamily="@font/alex_brush"
-                        android:text="Tier"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="100dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.471"
+                        android:background="#ffffff"
+                        app:layout_constraintEnd_toStartOf="@+id/threedots"
+                        app:layout_constraintHorizontal_bias="0.061"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -75,32 +77,18 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:background="#FFFFFF"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2"
-                app:stackFromEnd="true"
+                app:layout_constraintVertical_bias="0.017"
                 app:reverseLayout="true"
-                app:layout_constraintVertical_bias="0.0">
+                app:stackFromEnd="true">
 
             </androidx.recyclerview.widget.RecyclerView>
-
-            <Spinner
-                android:id="@+id/spinnerr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="7dp"
-                android:background="#ffffff"
-                app:layout_constraintBottom_toTopOf="@+id/recycler_view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.132"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
