--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -71,7 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <TextView
-            android:id="@+id/comment_icon"
+            android:id="@+id/edit_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
